Details: Fix Kingdom wrapping

--- a/styles/details.module.css
+++ b/styles/details.module.css
@@ -48,11 +48,11 @@
 }
 
 .kingdom {
-    flex: 1 0 auto;
+    flex: 1 1 auto;
 }
 
 .author {
-    flex: 1 1 auto;
+    flex: 1 1 min-content;
 }
 
 .details_title {
